feat: full text search and fuzzy search