@@ -1,6 +1,7 @@
 package com.chandu.search.service.service.impl;
 
-import com.chandu.search.service.model.Dish;
+import com.chandu.search.service.dto.DishDto;
+import com.chandu.search.service.dto.SearchResultDto;
 import com.chandu.search.service.service.LuceneService;
 import jakarta.annotation.PostConstruct;
 import jakarta.annotation.PreDestroy;
@@ -16,6 +17,7 @@ import org.apache.lucene.store.Directory;
 import org.springframework.stereotype.Service;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 @RequiredArgsConstructor
@@ -26,12 +28,11 @@ public class LuceneServiceImpl implements LuceneService {
     private final Directory directory;
     private final Analyzer analyzer;
     private final IndexWriter indexWriter;
-
     private SearcherManager searcherManager;
 
-    private static final String ID_FIELD = "id";
     private static final String NAME_FIELD = "name";
     private static final int MAX_SEARCH_RESULTS = 50;
+    private static final String CATEGORY_FIELD = "category";
 
     @PostConstruct
     public void init() throws IOException {
@@ -47,39 +48,61 @@ public class LuceneServiceImpl implements LuceneService {
     }
 
     @Override
-    public void indexDish(Dish dish) throws IOException {
-        if (dish == null || dish.getId() == null || dish.getName() == null || dish.getName().isBlank()) return;
-
-        Document doc = createDocument(dish);
-        indexWriter.updateDocument(new Term(ID_FIELD, dish.getId().toString()), doc);
+    public void indexDish(DishDto dishDto) throws IOException {
+        if (dishDto == null || dishDto.getName() == null || dishDto.getName().isBlank()) return;
+        Document doc = createDocument(dishDto);
+        indexWriter.addDocument(doc);
         indexWriter.commit();
         searcherManager.maybeRefresh();
     }
 
     @Override
-    public List<String> search(String queryString) throws ParseException, IOException {
-        if (queryString == null || queryString.isBlank()) return List.of();
+    public SearchResultDto search(String queryString) throws ParseException, IOException {
+        if (queryString == null || queryString.isBlank()) {
+            return new SearchResultDto(0, Collections.emptyList());
+        }
 
-        String escaped = QueryParser.escape(queryString.trim());
-        String wildcardQuery = "*" + escaped + "*";
+        String escapedQuery = QueryParser.escape(queryString.toLowerCase().trim());
+        List<String> fieldsToSearch = List.of(NAME_FIELD, CATEGORY_FIELD);
 
-        QueryParser parser = new QueryParser(NAME_FIELD, analyzer);
-        parser.setAllowLeadingWildcard(true);
-        Query query = parser.parse(wildcardQuery);
+        BooleanQuery.Builder finalQueryBuilder = new BooleanQuery.Builder();
+
+        for (String field : fieldsToSearch) {
+            Term fuzzyTerm = new Term(field, queryString.toLowerCase());
+            Query fuzzyQuery = new FuzzyQuery(fuzzyTerm, 2);
+
+            String wildcard = "*" + escapedQuery + "*";
+            QueryParser parser = new QueryParser(field, analyzer);
+            parser.setAllowLeadingWildcard(true);
+            Query wildcardQuery = parser.parse(wildcard);
+
+            BooleanQuery.Builder fieldQueryBuilder = new BooleanQuery.Builder();
+            fieldQueryBuilder.add(fuzzyQuery, BooleanClause.Occur.SHOULD);
+            fieldQueryBuilder.add(wildcardQuery, BooleanClause.Occur.SHOULD);
+
+            finalQueryBuilder.add(fieldQueryBuilder.build(), BooleanClause.Occur.SHOULD);
+        }
+
+        Query finalQuery = finalQueryBuilder.build();
 
         searcherManager.maybeRefresh();
         IndexSearcher searcher = null;
 
         try {
             searcher = searcherManager.acquire();
-            TopDocs topDocs = searcher.search(query, MAX_SEARCH_RESULTS);
+            TopDocs topDocs = searcher.search(finalQuery, MAX_SEARCH_RESULTS);
+            log.info("Total documents found: {}", topDocs.totalHits.value);
 
-            List<String> results = new ArrayList<>(topDocs.scoreDocs.length);
+            List<DishDto> results = new ArrayList<>(topDocs.scoreDocs.length);
             for (ScoreDoc sd : topDocs.scoreDocs) {
                 Document doc = searcher.doc(sd.doc);
-                results.add(doc.get(NAME_FIELD));
+                results.add(new DishDto(
+                        doc.get(NAME_FIELD),
+                        doc.get(CATEGORY_FIELD)
+                ));
             }
-            return results;
+
+            return new SearchResultDto(results.size(), results);
         } finally {
             if (searcher != null) {
                 searcherManager.release(searcher);
@@ -87,10 +110,11 @@ public class LuceneServiceImpl implements LuceneService {
         }
     }
 
-    private Document createDocument(Dish dish) {
+
+    private Document createDocument(DishDto dishDto) {
         Document doc = new Document();
-        doc.add(new StringField(ID_FIELD, dish.getId().toString(), Field.Store.YES));
-        doc.add(new TextField(NAME_FIELD, dish.getName(), Field.Store.YES));
+        doc.add(new TextField(NAME_FIELD, dishDto.getName(), Field.Store.YES));
+        doc.add(new TextField(CATEGORY_FIELD, dishDto.getCategory(), Field.Store.YES));
         return doc;
     }
 }
